mock up a sidebar

--- a/about.html
+++ b/about.html
@@ -28,5 +28,9 @@
     <!-- jQuery first, then Bootstrap JS. -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="node_modules/react/dist/react-with-addons.min.js"></script>
+    <script src="node_modules/react/dist/JSXTransformer.js"></script>
+
+    <script type="text/jsx" src="src/index.js"></script>
   </body>
 </html>
