--- a/index.html
+++ b/index.html
@@ -23,25 +23,7 @@
         </ul>
       </nav>
       <div class="row">
-        <div class="col-lg-3">
-          <h4>Patients <small>(sorted alphabetically)</small></h4>
-          <ul class="nav nav-pills nav-stacked">
-            <li class="nav-item">
-              <a href="#" class="nav-link">{{patient.lastName}}, {{patient.firstName}}</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">{{patient.lastName}}, {{patient.firstName}}</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">{{patient.lastName}}, {{patient.firstName}}</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link active">{{patient.lastName}}, {{patient.firstName}}</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">{{patient.lastName}}, {{patient.firstName}}</a>
-            </li>
-          </ul>
+        <div id="patientList" class="col-lg-3">
         </div>
         <div class="col-xs-9">
           <h4 class="card-title">BMI Calculations <small>(sorted by date)</small></h4>
@@ -58,5 +40,8 @@
     <!-- jQuery first, then Bootstrap JS. -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="node_modules/react/dist/react-with-addons.min.js"></script>
+    <script src="node_modules/react/dist/JSXTransformer.js"></script>
+    <script type="text/jsx" src="src/index.js"></script>
   </body>
 </html>
